--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,3 +130,8 @@ h1 {
   border-radius: 10px;
   margin: 10px;
 }
+
+.answerButton:hover {
+  background-color: var(--darkblue);
+  color: white;
+}
